--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -39,10 +39,7 @@
   </div>
   <div class="mb-3">
     <label for="repeat-password" class="form-label">Repeat password</label>
-    <input type="password" class="form-control {{#if errors.repeatPassword}}is-invalid{{/if}}" id="repeat-password" name="repeatPassword" required>
-    <div class="invalid-feedback">
-      {{errors.repeatPassword}}
-    </div>
+    <input type="password" class="form-control" id="repeat-password" name="repeatPassword" required>
   </div>
   <button type="submit" class="btn btn-primary">Create account</button>
 </form>
