--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -7,7 +7,12 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/signup">Sign up</a>
+          {{#if currentUser}}
+            <a class="nav-link" aria-current="page" href="/logout">Log out</a>
+          {{else}}
+            <a class="nav-link" aria-current="page" href="/signup">Sign up</a>
+            <a class="nav-link" aria-current="page" href="/login">Log in</a>
+          {{/if}}
         </li>
       </ul>
     </div>
