feat: tweet model + timeline

--- a/views/user/timeline.hbs
+++ b/views/user/timeline.hbs
@@ -1,1 +1,9 @@
-<h1 class="text-primary">What's happening now</h1>
+<div class="d-flex min-vh-100 gap-2">
+  {{> sidebar}}
+  <section class="border border-bottom-0 border-top-0 w-100 p-4">
+    <h1 class="text-primary">What's happening</h1>
+    {{#each tweets as |tweet|}}
+      {{> tweet tweet}}
+    {{/each}}
+  </section>
+</div>
