--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -5,24 +5,20 @@
         <i class="bi bi-house"></i>
         Timeline
       </a>
-      <a href="/new-tweet" class="nav-link" aria-current="page">
-        <i class="bi bi-pencil-fill"></i>
-        New tweet
-      </a>
     </li>
   </ul>
   <hr>
   <div class="dropdown">
-    <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+    <a href="#" class="d-flex align-items-center text-primary text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
       <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
-      <strong>mdo</strong>
+      <strong>{{currentUser.username}}</strong>
     </a>
     <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
-      <li><a class="dropdown-item" href="#">New project...</a></li>
+      <li><a class="dropdown-item" href="/new-tweet">New tweet</a></li>
       <li><a class="dropdown-item" href="#">Settings</a></li>
-      <li><a class="dropdown-item" href="#">Profile</a></li>
+      <li><a class="dropdown-item" href="/profile">Profile</a></li>
       <li><hr class="dropdown-divider"></li>
-      <li><a class="dropdown-item" href="#">Sign out</a></li>
+      <li><a class="dropdown-item" href="/logout">Sign out</a></li>
     </ul>
   </div>
 </div>
