--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link href="/css/styles.css" rel="stylesheet" />
   {{!-- lo dejo al final para que se cargue todo lo demás primero --}}
-    {{!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> --}}
-    {{!-- <script src="/js/main.js"></script> --}}
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="/js/main.js"></script>
     <title>Tweethack</title>
   </head>
   <body>
