--- a/views/partials/tweet.hbs
+++ b/views/partials/tweet.hbs
@@ -8,13 +8,16 @@
       <p class="m-0">{{tweet.body}}</p>
     </div>
   </div>
-  <div style="margin-left: 60px;">
+  <div class="d-flex align-items-center" style="margin-left: 60px;">
     {{#isOwner currentUser=currentUser tweetOwnerId=tweet.user.id}}
-      <form action="/tweets/{{tweet.id}}/delete" method="POST">
+      <form class="m-0" action="/tweets/{{tweet.id}}/delete" method="POST">
         <button class="btn text-danger" type="submit">
           <i class="bi bi-trash3-fill"></i>
         </button>
       </form>
     {{/isOwner}}
+    <button class="like-btn btn text-primary" type="button" value="{{tweet.id}}">
+      <i class="bi bi-heart"></i>
+    </button>
   </div>
 </div>
